--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "John Games",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.5.4",
     "babel-core": "^5.6.14",
     "babel-loader": "^5.2.2",
     "jsx-loader": "^0.13.2",
